y.output
Terminals unused in grammar

   BREAK
   CASE
   CONST
   SWITCH
   DEFAULT
   DOT
   COLON


Grammar

    0 $accept: START $end

    1 START: Cprogram

    2 Cprogram: external_declaration
    3         | Cprogram external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 function_definition: type_specifier ID LB parameter_list RB compound_statement
    7                    | type_specifier ID LB RB compound_statement
    8                    | type_specifier ID LB parameter_list RB SEMI
    9                    | type_specifier ID LB RB SEMI

   10 declaration: type_specifier declarator SEMI
   11            | type_specifier assignmenexpression SEMI

   12 parameter_list: parameter_declaration
   13               | parameter_list COMMA parameter_declaration

   14 parameter_declaration: type_specifier declarator

   15 declarator: ID

   16 compound_statement: LBB RBB
   17                   | LBB block_item_list RBB

   18 block_item_list: block_item
   19                | block_item_list block_item

   20 block_item: declaration
   21           | statement
   22           | RETURN arithmetic_expression_list SEMI
   23           | RETURN conditional_expression_list SEMI

   24 statement: compound_statement
   25          | expression_statement
   26          | selection_statement
   27          | iteration_statement

   28 expression_statement: SEMI
   29                     | expression SEMI

   30 selection_statement: IF LB expression RB statement statement
   31                    | IF LB expression RB statement ELSE statement

   32 iteration_statement: WHILE LB expression RB statement
   33                    | FOR LB declaration expression_statement expression RB statement

   34 expression: conditional_expression_list
   35           | assignmenexpression
   36           | arithmetic_expression_list

   37 assignmenexpression: declarator assignmenoperator expression

   38 arithmetic_expression_list: arithmetic_expression_list arithmetic_operator arithmetic_expression
   39                           | arithmetic_expression_list arithmetic_operator LB arithmetic_expression_list RB
   40                           | arithmetic_expression
   41                           | LB arithmetic_expression_list RB

   42 arithmetic_expression: value
   43                      | ADD ID
   44                      | MINUS ID
   45                      | ID LB RB
   46                      | ID LB value_list RB

   47 value_list: value
   48           | value COMMA value

   49 value: CONSTANTNUM
   50      | ADD CONSTANTNUM
   51      | MINUS CONSTANTNUM
   52      | declarator

   53 conditional_expression_list: conditional_expression
   54                            | conditional_expression logical_operator conditional_expression

   55 conditional_expression: arithmetic_expression relational_operator arithmetic_expression

   56 arithmetic_operator: ADD
   57                    | MINUS
   58                    | TIMES
   59                    | DIVIDE

   60 logical_operator: DAND
   61                 | DOR

   62 relational_operator: EQUAL
   63                    | LESS
   64                    | GREATER
   65                    | NOTEQUAL
   66                    | LESSEQUAL
   67                    | GREATEREQUAL

   68 assignmenoperator: ASSIGN

   69 type_specifier: VOID
   70               | INT
   71               | FLOAT
   72               | DOUBLE


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 6 7 8 9 15 43 44 45 46
INT (259) 70
BREAK (260)
CASE (261)
DOUBLE (262) 72
CONST (263)
FLOAT (264) 71
VOID (265) 69
RETURN (266) 22 23
FOR (267) 33
WHILE (268) 32
IF (269) 30 31
ELSE (270) 31
SWITCH (271)
DEFAULT (272)
LB (273) 6 7 8 9 30 31 32 33 39 41 45 46
RB (274) 6 7 8 9 30 31 32 33 39 41 45 46
LBB (275) 16 17
RBB (276) 16 17
DOT (277)
SEMI (278) 8 9 10 11 22 23 28 29
COLON (279)
COMMA (280) 13 48
CONSTANTNUM (281) 49 50 51
ASSIGN (282) 68
DOR (283) 61
DAND (284) 60
EQUAL (285) 62
NOTEQUAL (286) 65
LESSEQUAL (287) 66
GREATEREQUAL (288) 67
LESS (289) 63
GREATER (290) 64
MINUS (291) 44 51 57
ADD (292) 43 50 56
DIVIDE (293) 59
TIMES (294) 58


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
START (41)
    on left: 1, on right: 0
Cprogram (42)
    on left: 2 3, on right: 1 3
external_declaration (43)
    on left: 4 5, on right: 2 3
function_definition (44)
    on left: 6 7 8 9, on right: 4
declaration (45)
    on left: 10 11, on right: 5 20 33
parameter_list (46)
    on left: 12 13, on right: 6 8 13
parameter_declaration (47)
    on left: 14, on right: 12 13
declarator (48)
    on left: 15, on right: 10 14 37 52
compound_statement (49)
    on left: 16 17, on right: 6 7 24
block_item_list (50)
    on left: 18 19, on right: 17 19
block_item (51)
    on left: 20 21 22 23, on right: 18 19
statement (52)
    on left: 24 25 26 27, on right: 21 30 31 32 33
expression_statement (53)
    on left: 28 29, on right: 25 33
selection_statement (54)
    on left: 30 31, on right: 26
iteration_statement (55)
    on left: 32 33, on right: 27
expression (56)
    on left: 34 35 36, on right: 29 30 31 32 33 37
assignmenexpression (57)
    on left: 37, on right: 11 35
arithmetic_expression_list (58)
    on left: 38 39 40 41, on right: 22 36 38 39 41
arithmetic_expression (59)
    on left: 42 43 44 45 46, on right: 38 40 55
value_list (60)
    on left: 47 48, on right: 46
value (61)
    on left: 49 50 51 52, on right: 42 47 48
conditional_expression_list (62)
    on left: 53 54, on right: 23 34
conditional_expression (63)
    on left: 55, on right: 53 54
arithmetic_operator (64)
    on left: 56 57 58 59, on right: 38 39
logical_operator (65)
    on left: 60 61, on right: 54
relational_operator (66)
    on left: 62 63 64 65 66 67, on right: 55
assignmenoperator (67)
    on left: 68, on right: 37
type_specifier (68)
    on left: 69 70 71 72, on right: 6 7 8 9 10 11 14


state 0

    0 $accept: . START $end

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    FLOAT   shift, and go to state 3
    VOID    shift, and go to state 4

    START                 go to state 5
    Cprogram              go to state 6
    external_declaration  go to state 7
    function_definition   go to state 8
    declaration           go to state 9
    type_specifier        go to state 10


state 1

   70 type_specifier: INT .

    $default  reduce using rule 70 (type_specifier)


state 2

   72 type_specifier: DOUBLE .

    $default  reduce using rule 72 (type_specifier)


state 3

   71 type_specifier: FLOAT .

    $default  reduce using rule 71 (type_specifier)


state 4

   69 type_specifier: VOID .

    $default  reduce using rule 69 (type_specifier)


state 5

    0 $accept: START . $end

    $end  shift, and go to state 11


state 6

    1 START: Cprogram .
    3 Cprogram: Cprogram . external_declaration

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    FLOAT   shift, and go to state 3
    VOID    shift, and go to state 4

    $default  reduce using rule 1 (START)

    external_declaration  go to state 12
    function_definition   go to state 8
    declaration           go to state 9
    type_specifier        go to state 10


state 7

    2 Cprogram: external_declaration .

    $default  reduce using rule 2 (Cprogram)


state 8

    4 external_declaration: function_definition .

    $default  reduce using rule 4 (external_declaration)


state 9

    5 external_declaration: declaration .

    $default  reduce using rule 5 (external_declaration)


state 10

    6 function_definition: type_specifier . ID LB parameter_list RB compound_statement
    7                    | type_specifier . ID LB RB compound_statement
    8                    | type_specifier . ID LB parameter_list RB SEMI
    9                    | type_specifier . ID LB RB SEMI
   10 declaration: type_specifier . declarator SEMI
   11            | type_specifier . assignmenexpression SEMI

    ID  shift, and go to state 13

    declarator           go to state 14
    assignmenexpression  go to state 15


state 11

    0 $accept: START $end .

    $default  accept


state 12

    3 Cprogram: Cprogram external_declaration .

    $default  reduce using rule 3 (Cprogram)


state 13

    6 function_definition: type_specifier ID . LB parameter_list RB compound_statement
    7                    | type_specifier ID . LB RB compound_statement
    8                    | type_specifier ID . LB parameter_list RB SEMI
    9                    | type_specifier ID . LB RB SEMI
   15 declarator: ID .

    LB  shift, and go to state 16

    $default  reduce using rule 15 (declarator)


state 14

   10 declaration: type_specifier declarator . SEMI
   37 assignmenexpression: declarator . assignmenoperator expression

    SEMI    shift, and go to state 17
    ASSIGN  shift, and go to state 18

    assignmenoperator  go to state 19


state 15

   11 declaration: type_specifier assignmenexpression . SEMI

    SEMI  shift, and go to state 20


state 16

    6 function_definition: type_specifier ID LB . parameter_list RB compound_statement
    7                    | type_specifier ID LB . RB compound_statement
    8                    | type_specifier ID LB . parameter_list RB SEMI
    9                    | type_specifier ID LB . RB SEMI

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    FLOAT   shift, and go to state 3
    VOID    shift, and go to state 4
    RB      shift, and go to state 21

    parameter_list         go to state 22
    parameter_declaration  go to state 23
    type_specifier         go to state 24


state 17

   10 declaration: type_specifier declarator SEMI .

    $default  reduce using rule 10 (declaration)


state 18

   68 assignmenoperator: ASSIGN .

    $default  reduce using rule 68 (assignmenoperator)


state 19

   37 assignmenexpression: declarator assignmenoperator . expression

    ID           shift, and go to state 25
    LB           shift, and go to state 26
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 28
    ADD          shift, and go to state 29

    declarator                   go to state 30
    expression                   go to state 31
    assignmenexpression          go to state 32
    arithmetic_expression_list   go to state 33
    arithmetic_expression        go to state 34
    value                        go to state 35
    conditional_expression_list  go to state 36
    conditional_expression       go to state 37


state 20

   11 declaration: type_specifier assignmenexpression SEMI .

    $default  reduce using rule 11 (declaration)


state 21

    7 function_definition: type_specifier ID LB RB . compound_statement
    9                    | type_specifier ID LB RB . SEMI

    LBB   shift, and go to state 38
    SEMI  shift, and go to state 39

    compound_statement  go to state 40


state 22

    6 function_definition: type_specifier ID LB parameter_list . RB compound_statement
    8                    | type_specifier ID LB parameter_list . RB SEMI
   13 parameter_list: parameter_list . COMMA parameter_declaration

    RB     shift, and go to state 41
    COMMA  shift, and go to state 42


state 23

   12 parameter_list: parameter_declaration .

    $default  reduce using rule 12 (parameter_list)


state 24

   14 parameter_declaration: type_specifier . declarator

    ID  shift, and go to state 43

    declarator  go to state 44


state 25

   15 declarator: ID .
   45 arithmetic_expression: ID . LB RB
   46                      | ID . LB value_list RB

    LB  shift, and go to state 45

    $default  reduce using rule 15 (declarator)


state 26

   41 arithmetic_expression_list: LB . arithmetic_expression_list RB

    ID           shift, and go to state 25
    LB           shift, and go to state 26
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 28
    ADD          shift, and go to state 29

    declarator                  go to state 46
    arithmetic_expression_list  go to state 47
    arithmetic_expression       go to state 48
    value                       go to state 35


state 27

   49 value: CONSTANTNUM .

    $default  reduce using rule 49 (value)


state 28

   44 arithmetic_expression: MINUS . ID
   51 value: MINUS . CONSTANTNUM

    ID           shift, and go to state 49
    CONSTANTNUM  shift, and go to state 50


state 29

   43 arithmetic_expression: ADD . ID
   50 value: ADD . CONSTANTNUM

    ID           shift, and go to state 51
    CONSTANTNUM  shift, and go to state 52


state 30

   37 assignmenexpression: declarator . assignmenoperator expression
   52 value: declarator .

    ASSIGN  shift, and go to state 18

    $default  reduce using rule 52 (value)

    assignmenoperator  go to state 19


state 31

   37 assignmenexpression: declarator assignmenoperator expression .

    $default  reduce using rule 37 (assignmenexpression)


state 32

   35 expression: assignmenexpression .

    $default  reduce using rule 35 (expression)


state 33

   36 expression: arithmetic_expression_list .
   38 arithmetic_expression_list: arithmetic_expression_list . arithmetic_operator arithmetic_expression
   39                           | arithmetic_expression_list . arithmetic_operator LB arithmetic_expression_list RB

    MINUS   shift, and go to state 53
    ADD     shift, and go to state 54
    DIVIDE  shift, and go to state 55
    TIMES   shift, and go to state 56

    $default  reduce using rule 36 (expression)

    arithmetic_operator  go to state 57


state 34

   40 arithmetic_expression_list: arithmetic_expression .
   55 conditional_expression: arithmetic_expression . relational_operator arithmetic_expression

    EQUAL         shift, and go to state 58
    NOTEQUAL      shift, and go to state 59
    LESSEQUAL     shift, and go to state 60
    GREATEREQUAL  shift, and go to state 61
    LESS          shift, and go to state 62
    GREATER       shift, and go to state 63

    $default  reduce using rule 40 (arithmetic_expression_list)

    relational_operator  go to state 64


state 35

   42 arithmetic_expression: value .

    $default  reduce using rule 42 (arithmetic_expression)


state 36

   34 expression: conditional_expression_list .

    $default  reduce using rule 34 (expression)


state 37

   53 conditional_expression_list: conditional_expression .
   54                            | conditional_expression . logical_operator conditional_expression

    DOR   shift, and go to state 65
    DAND  shift, and go to state 66

    $default  reduce using rule 53 (conditional_expression_list)

    logical_operator  go to state 67


state 38

   16 compound_statement: LBB . RBB
   17                   | LBB . block_item_list RBB

    ID           shift, and go to state 25
    INT          shift, and go to state 1
    DOUBLE       shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 68
    FOR          shift, and go to state 69
    WHILE        shift, and go to state 70
    IF           shift, and go to state 71
    LB           shift, and go to state 26
    LBB          shift, and go to state 38
    RBB          shift, and go to state 72
    SEMI         shift, and go to state 73
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 28
    ADD          shift, and go to state 29

    declaration                  go to state 74
    declarator                   go to state 30
    compound_statement           go to state 75
    block_item_list              go to state 76
    block_item                   go to state 77
    statement                    go to state 78
    expression_statement         go to state 79
    selection_statement          go to state 80
    iteration_statement          go to state 81
    expression                   go to state 82
    assignmenexpression          go to state 32
    arithmetic_expression_list   go to state 33
    arithmetic_expression        go to state 34
    value                        go to state 35
    conditional_expression_list  go to state 36
    conditional_expression       go to state 37
    type_specifier               go to state 83


state 39

    9 function_definition: type_specifier ID LB RB SEMI .

    $default  reduce using rule 9 (function_definition)


state 40

    7 function_definition: type_specifier ID LB RB compound_statement .

    $default  reduce using rule 7 (function_definition)


state 41

    6 function_definition: type_specifier ID LB parameter_list RB . compound_statement
    8                    | type_specifier ID LB parameter_list RB . SEMI

    LBB   shift, and go to state 38
    SEMI  shift, and go to state 84

    compound_statement  go to state 85


state 42

   13 parameter_list: parameter_list COMMA . parameter_declaration

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    FLOAT   shift, and go to state 3
    VOID    shift, and go to state 4

    parameter_declaration  go to state 86
    type_specifier         go to state 24


state 43

   15 declarator: ID .

    $default  reduce using rule 15 (declarator)


state 44

   14 parameter_declaration: type_specifier declarator .

    $default  reduce using rule 14 (parameter_declaration)


state 45

   45 arithmetic_expression: ID LB . RB
   46                      | ID LB . value_list RB

    ID           shift, and go to state 43
    RB           shift, and go to state 87
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 88
    ADD          shift, and go to state 89

    declarator  go to state 46
    value_list  go to state 90
    value       go to state 91


state 46

   52 value: declarator .

    $default  reduce using rule 52 (value)


state 47

   38 arithmetic_expression_list: arithmetic_expression_list . arithmetic_operator arithmetic_expression
   39                           | arithmetic_expression_list . arithmetic_operator LB arithmetic_expression_list RB
   41                           | LB arithmetic_expression_list . RB

    RB      shift, and go to state 92
    MINUS   shift, and go to state 53
    ADD     shift, and go to state 54
    DIVIDE  shift, and go to state 55
    TIMES   shift, and go to state 56

    arithmetic_operator  go to state 57


state 48

   40 arithmetic_expression_list: arithmetic_expression .

    $default  reduce using rule 40 (arithmetic_expression_list)


state 49

   44 arithmetic_expression: MINUS ID .

    $default  reduce using rule 44 (arithmetic_expression)


state 50

   51 value: MINUS CONSTANTNUM .

    $default  reduce using rule 51 (value)


state 51

   43 arithmetic_expression: ADD ID .

    $default  reduce using rule 43 (arithmetic_expression)


state 52

   50 value: ADD CONSTANTNUM .

    $default  reduce using rule 50 (value)


state 53

   57 arithmetic_operator: MINUS .

    $default  reduce using rule 57 (arithmetic_operator)


state 54

   56 arithmetic_operator: ADD .

    $default  reduce using rule 56 (arithmetic_operator)


state 55

   59 arithmetic_operator: DIVIDE .

    $default  reduce using rule 59 (arithmetic_operator)


state 56

   58 arithmetic_operator: TIMES .

    $default  reduce using rule 58 (arithmetic_operator)


state 57

   38 arithmetic_expression_list: arithmetic_expression_list arithmetic_operator . arithmetic_expression
   39                           | arithmetic_expression_list arithmetic_operator . LB arithmetic_expression_list RB

    ID           shift, and go to state 25
    LB           shift, and go to state 93
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 28
    ADD          shift, and go to state 29

    declarator             go to state 46
    arithmetic_expression  go to state 94
    value                  go to state 35


state 58

   62 relational_operator: EQUAL .

    $default  reduce using rule 62 (relational_operator)


state 59

   65 relational_operator: NOTEQUAL .

    $default  reduce using rule 65 (relational_operator)


state 60

   66 relational_operator: LESSEQUAL .

    $default  reduce using rule 66 (relational_operator)


state 61

   67 relational_operator: GREATEREQUAL .

    $default  reduce using rule 67 (relational_operator)


state 62

   63 relational_operator: LESS .

    $default  reduce using rule 63 (relational_operator)


state 63

   64 relational_operator: GREATER .

    $default  reduce using rule 64 (relational_operator)


state 64

   55 conditional_expression: arithmetic_expression relational_operator . arithmetic_expression

    ID           shift, and go to state 25
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 28
    ADD          shift, and go to state 29

    declarator             go to state 46
    arithmetic_expression  go to state 95
    value                  go to state 35


state 65

   61 logical_operator: DOR .

    $default  reduce using rule 61 (logical_operator)


state 66

   60 logical_operator: DAND .

    $default  reduce using rule 60 (logical_operator)


state 67

   54 conditional_expression_list: conditional_expression logical_operator . conditional_expression

    ID           shift, and go to state 25
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 28
    ADD          shift, and go to state 29

    declarator              go to state 46
    arithmetic_expression   go to state 96
    value                   go to state 35
    conditional_expression  go to state 97


state 68

   22 block_item: RETURN . arithmetic_expression_list SEMI
   23           | RETURN . conditional_expression_list SEMI

    ID           shift, and go to state 25
    LB           shift, and go to state 26
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 28
    ADD          shift, and go to state 29

    declarator                   go to state 46
    arithmetic_expression_list   go to state 98
    arithmetic_expression        go to state 34
    value                        go to state 35
    conditional_expression_list  go to state 99
    conditional_expression       go to state 37


state 69

   33 iteration_statement: FOR . LB declaration expression_statement expression RB statement

    LB  shift, and go to state 100


state 70

   32 iteration_statement: WHILE . LB expression RB statement

    LB  shift, and go to state 101


state 71

   30 selection_statement: IF . LB expression RB statement statement
   31                    | IF . LB expression RB statement ELSE statement

    LB  shift, and go to state 102


state 72

   16 compound_statement: LBB RBB .

    $default  reduce using rule 16 (compound_statement)


state 73

   28 expression_statement: SEMI .

    $default  reduce using rule 28 (expression_statement)


state 74

   20 block_item: declaration .

    $default  reduce using rule 20 (block_item)


state 75

   24 statement: compound_statement .

    $default  reduce using rule 24 (statement)


state 76

   17 compound_statement: LBB block_item_list . RBB
   19 block_item_list: block_item_list . block_item

    ID           shift, and go to state 25
    INT          shift, and go to state 1
    DOUBLE       shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 68
    FOR          shift, and go to state 69
    WHILE        shift, and go to state 70
    IF           shift, and go to state 71
    LB           shift, and go to state 26
    LBB          shift, and go to state 38
    RBB          shift, and go to state 103
    SEMI         shift, and go to state 73
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 28
    ADD          shift, and go to state 29

    declaration                  go to state 74
    declarator                   go to state 30
    compound_statement           go to state 75
    block_item                   go to state 104
    statement                    go to state 78
    expression_statement         go to state 79
    selection_statement          go to state 80
    iteration_statement          go to state 81
    expression                   go to state 82
    assignmenexpression          go to state 32
    arithmetic_expression_list   go to state 33
    arithmetic_expression        go to state 34
    value                        go to state 35
    conditional_expression_list  go to state 36
    conditional_expression       go to state 37
    type_specifier               go to state 83


state 77

   18 block_item_list: block_item .

    $default  reduce using rule 18 (block_item_list)


state 78

   21 block_item: statement .

    $default  reduce using rule 21 (block_item)


state 79

   25 statement: expression_statement .

    $default  reduce using rule 25 (statement)


state 80

   26 statement: selection_statement .

    $default  reduce using rule 26 (statement)


state 81

   27 statement: iteration_statement .

    $default  reduce using rule 27 (statement)


state 82

   29 expression_statement: expression . SEMI

    SEMI  shift, and go to state 105


state 83

   10 declaration: type_specifier . declarator SEMI
   11            | type_specifier . assignmenexpression SEMI

    ID  shift, and go to state 43

    declarator           go to state 14
    assignmenexpression  go to state 15


state 84

    8 function_definition: type_specifier ID LB parameter_list RB SEMI .

    $default  reduce using rule 8 (function_definition)


state 85

    6 function_definition: type_specifier ID LB parameter_list RB compound_statement .

    $default  reduce using rule 6 (function_definition)


state 86

   13 parameter_list: parameter_list COMMA parameter_declaration .

    $default  reduce using rule 13 (parameter_list)


state 87

   45 arithmetic_expression: ID LB RB .

    $default  reduce using rule 45 (arithmetic_expression)


state 88

   51 value: MINUS . CONSTANTNUM

    CONSTANTNUM  shift, and go to state 50


state 89

   50 value: ADD . CONSTANTNUM

    CONSTANTNUM  shift, and go to state 52


state 90

   46 arithmetic_expression: ID LB value_list . RB

    RB  shift, and go to state 106


state 91

   47 value_list: value .
   48           | value . COMMA value

    COMMA  shift, and go to state 107

    $default  reduce using rule 47 (value_list)


state 92

   41 arithmetic_expression_list: LB arithmetic_expression_list RB .

    $default  reduce using rule 41 (arithmetic_expression_list)


state 93

   39 arithmetic_expression_list: arithmetic_expression_list arithmetic_operator LB . arithmetic_expression_list RB

    ID           shift, and go to state 25
    LB           shift, and go to state 26
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 28
    ADD          shift, and go to state 29

    declarator                  go to state 46
    arithmetic_expression_list  go to state 108
    arithmetic_expression       go to state 48
    value                       go to state 35


state 94

   38 arithmetic_expression_list: arithmetic_expression_list arithmetic_operator arithmetic_expression .

    $default  reduce using rule 38 (arithmetic_expression_list)


state 95

   55 conditional_expression: arithmetic_expression relational_operator arithmetic_expression .

    $default  reduce using rule 55 (conditional_expression)


state 96

   55 conditional_expression: arithmetic_expression . relational_operator arithmetic_expression

    EQUAL         shift, and go to state 58
    NOTEQUAL      shift, and go to state 59
    LESSEQUAL     shift, and go to state 60
    GREATEREQUAL  shift, and go to state 61
    LESS          shift, and go to state 62
    GREATER       shift, and go to state 63

    relational_operator  go to state 64


state 97

   54 conditional_expression_list: conditional_expression logical_operator conditional_expression .

    $default  reduce using rule 54 (conditional_expression_list)


state 98

   22 block_item: RETURN arithmetic_expression_list . SEMI
   38 arithmetic_expression_list: arithmetic_expression_list . arithmetic_operator arithmetic_expression
   39                           | arithmetic_expression_list . arithmetic_operator LB arithmetic_expression_list RB

    SEMI    shift, and go to state 109
    MINUS   shift, and go to state 53
    ADD     shift, and go to state 54
    DIVIDE  shift, and go to state 55
    TIMES   shift, and go to state 56

    arithmetic_operator  go to state 57


state 99

   23 block_item: RETURN conditional_expression_list . SEMI

    SEMI  shift, and go to state 110


state 100

   33 iteration_statement: FOR LB . declaration expression_statement expression RB statement

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    FLOAT   shift, and go to state 3
    VOID    shift, and go to state 4

    declaration     go to state 111
    type_specifier  go to state 83


state 101

   32 iteration_statement: WHILE LB . expression RB statement

    ID           shift, and go to state 25
    LB           shift, and go to state 26
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 28
    ADD          shift, and go to state 29

    declarator                   go to state 30
    expression                   go to state 112
    assignmenexpression          go to state 32
    arithmetic_expression_list   go to state 33
    arithmetic_expression        go to state 34
    value                        go to state 35
    conditional_expression_list  go to state 36
    conditional_expression       go to state 37


state 102

   30 selection_statement: IF LB . expression RB statement statement
   31                    | IF LB . expression RB statement ELSE statement

    ID           shift, and go to state 25
    LB           shift, and go to state 26
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 28
    ADD          shift, and go to state 29

    declarator                   go to state 30
    expression                   go to state 113
    assignmenexpression          go to state 32
    arithmetic_expression_list   go to state 33
    arithmetic_expression        go to state 34
    value                        go to state 35
    conditional_expression_list  go to state 36
    conditional_expression       go to state 37


state 103

   17 compound_statement: LBB block_item_list RBB .

    $default  reduce using rule 17 (compound_statement)


state 104

   19 block_item_list: block_item_list block_item .

    $default  reduce using rule 19 (block_item_list)


state 105

   29 expression_statement: expression SEMI .

    $default  reduce using rule 29 (expression_statement)


state 106

   46 arithmetic_expression: ID LB value_list RB .

    $default  reduce using rule 46 (arithmetic_expression)


state 107

   48 value_list: value COMMA . value

    ID           shift, and go to state 43
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 88
    ADD          shift, and go to state 89

    declarator  go to state 46
    value       go to state 114


state 108

   38 arithmetic_expression_list: arithmetic_expression_list . arithmetic_operator arithmetic_expression
   39                           | arithmetic_expression_list . arithmetic_operator LB arithmetic_expression_list RB
   39                           | arithmetic_expression_list arithmetic_operator LB arithmetic_expression_list . RB

    RB      shift, and go to state 115
    MINUS   shift, and go to state 53
    ADD     shift, and go to state 54
    DIVIDE  shift, and go to state 55
    TIMES   shift, and go to state 56

    arithmetic_operator  go to state 57


state 109

   22 block_item: RETURN arithmetic_expression_list SEMI .

    $default  reduce using rule 22 (block_item)


state 110

   23 block_item: RETURN conditional_expression_list SEMI .

    $default  reduce using rule 23 (block_item)


state 111

   33 iteration_statement: FOR LB declaration . expression_statement expression RB statement

    ID           shift, and go to state 25
    LB           shift, and go to state 26
    SEMI         shift, and go to state 73
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 28
    ADD          shift, and go to state 29

    declarator                   go to state 30
    expression_statement         go to state 116
    expression                   go to state 82
    assignmenexpression          go to state 32
    arithmetic_expression_list   go to state 33
    arithmetic_expression        go to state 34
    value                        go to state 35
    conditional_expression_list  go to state 36
    conditional_expression       go to state 37


state 112

   32 iteration_statement: WHILE LB expression . RB statement

    RB  shift, and go to state 117


state 113

   30 selection_statement: IF LB expression . RB statement statement
   31                    | IF LB expression . RB statement ELSE statement

    RB  shift, and go to state 118


state 114

   48 value_list: value COMMA value .

    $default  reduce using rule 48 (value_list)


state 115

   39 arithmetic_expression_list: arithmetic_expression_list arithmetic_operator LB arithmetic_expression_list RB .

    $default  reduce using rule 39 (arithmetic_expression_list)


state 116

   33 iteration_statement: FOR LB declaration expression_statement . expression RB statement

    ID           shift, and go to state 25
    LB           shift, and go to state 26
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 28
    ADD          shift, and go to state 29

    declarator                   go to state 30
    expression                   go to state 119
    assignmenexpression          go to state 32
    arithmetic_expression_list   go to state 33
    arithmetic_expression        go to state 34
    value                        go to state 35
    conditional_expression_list  go to state 36
    conditional_expression       go to state 37


state 117

   32 iteration_statement: WHILE LB expression RB . statement

    ID           shift, and go to state 25
    FOR          shift, and go to state 69
    WHILE        shift, and go to state 70
    IF           shift, and go to state 71
    LB           shift, and go to state 26
    LBB          shift, and go to state 38
    SEMI         shift, and go to state 73
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 28
    ADD          shift, and go to state 29

    declarator                   go to state 30
    compound_statement           go to state 75
    statement                    go to state 120
    expression_statement         go to state 79
    selection_statement          go to state 80
    iteration_statement          go to state 81
    expression                   go to state 82
    assignmenexpression          go to state 32
    arithmetic_expression_list   go to state 33
    arithmetic_expression        go to state 34
    value                        go to state 35
    conditional_expression_list  go to state 36
    conditional_expression       go to state 37


state 118

   30 selection_statement: IF LB expression RB . statement statement
   31                    | IF LB expression RB . statement ELSE statement

    ID           shift, and go to state 25
    FOR          shift, and go to state 69
    WHILE        shift, and go to state 70
    IF           shift, and go to state 71
    LB           shift, and go to state 26
    LBB          shift, and go to state 38
    SEMI         shift, and go to state 73
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 28
    ADD          shift, and go to state 29

    declarator                   go to state 30
    compound_statement           go to state 75
    statement                    go to state 121
    expression_statement         go to state 79
    selection_statement          go to state 80
    iteration_statement          go to state 81
    expression                   go to state 82
    assignmenexpression          go to state 32
    arithmetic_expression_list   go to state 33
    arithmetic_expression        go to state 34
    value                        go to state 35
    conditional_expression_list  go to state 36
    conditional_expression       go to state 37


state 119

   33 iteration_statement: FOR LB declaration expression_statement expression . RB statement

    RB  shift, and go to state 122


state 120

   32 iteration_statement: WHILE LB expression RB statement .

    $default  reduce using rule 32 (iteration_statement)


state 121

   30 selection_statement: IF LB expression RB statement . statement
   31                    | IF LB expression RB statement . ELSE statement

    ID           shift, and go to state 25
    FOR          shift, and go to state 69
    WHILE        shift, and go to state 70
    IF           shift, and go to state 71
    ELSE         shift, and go to state 123
    LB           shift, and go to state 26
    LBB          shift, and go to state 38
    SEMI         shift, and go to state 73
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 28
    ADD          shift, and go to state 29

    declarator                   go to state 30
    compound_statement           go to state 75
    statement                    go to state 124
    expression_statement         go to state 79
    selection_statement          go to state 80
    iteration_statement          go to state 81
    expression                   go to state 82
    assignmenexpression          go to state 32
    arithmetic_expression_list   go to state 33
    arithmetic_expression        go to state 34
    value                        go to state 35
    conditional_expression_list  go to state 36
    conditional_expression       go to state 37


state 122

   33 iteration_statement: FOR LB declaration expression_statement expression RB . statement

    ID           shift, and go to state 25
    FOR          shift, and go to state 69
    WHILE        shift, and go to state 70
    IF           shift, and go to state 71
    LB           shift, and go to state 26
    LBB          shift, and go to state 38
    SEMI         shift, and go to state 73
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 28
    ADD          shift, and go to state 29

    declarator                   go to state 30
    compound_statement           go to state 75
    statement                    go to state 125
    expression_statement         go to state 79
    selection_statement          go to state 80
    iteration_statement          go to state 81
    expression                   go to state 82
    assignmenexpression          go to state 32
    arithmetic_expression_list   go to state 33
    arithmetic_expression        go to state 34
    value                        go to state 35
    conditional_expression_list  go to state 36
    conditional_expression       go to state 37


state 123

   31 selection_statement: IF LB expression RB statement ELSE . statement

    ID           shift, and go to state 25
    FOR          shift, and go to state 69
    WHILE        shift, and go to state 70
    IF           shift, and go to state 71
    LB           shift, and go to state 26
    LBB          shift, and go to state 38
    SEMI         shift, and go to state 73
    CONSTANTNUM  shift, and go to state 27
    MINUS        shift, and go to state 28
    ADD          shift, and go to state 29

    declarator                   go to state 30
    compound_statement           go to state 75
    statement                    go to state 126
    expression_statement         go to state 79
    selection_statement          go to state 80
    iteration_statement          go to state 81
    expression                   go to state 82
    assignmenexpression          go to state 32
    arithmetic_expression_list   go to state 33
    arithmetic_expression        go to state 34
    value                        go to state 35
    conditional_expression_list  go to state 36
    conditional_expression       go to state 37


state 124

   30 selection_statement: IF LB expression RB statement statement .

    $default  reduce using rule 30 (selection_statement)


state 125

   33 iteration_statement: FOR LB declaration expression_statement expression RB statement .

    $default  reduce using rule 33 (iteration_statement)


state 126

   31 selection_statement: IF LB expression RB statement ELSE statement .

    $default  reduce using rule 31 (selection_statement)
